tests/ui/parser/missing_right_paren.rs
// ignore-tidy-trailing-newlines
//@ error-pattern: this file contains an unclosed delimiter
//@ error-pattern: aborting due to 1 previous error
fn main((ؼ